# pokeapi_docker_fastapi

./: .env  Dockerfile  Makefile  compose.yaml  dan.doc  docker-compose.yaml  dockerfile  estrutura.txt  pyproject.toml  requirements.txt  structure.txt
app/: base_models.py  database.py  main.py  models.py
app/static/: script.js  style.css
app/templates/: crud.html  index.html
