[project]

name = "pokeapi"
version = "0.1.0"
description = "A simple API for managing Pokémon data."
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.110,<0.112",
    "starlette>=0.37,<0.38",
    "jinja2>=3.1,<4.0",
    "httpx>=0.27",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "fastapi-pagination>=0.12",
    "fastapi-filters>=0.3",
    "requests>=2.32.5",
]
